<resources>
    <string name="app_name">Demo 3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    //slider fisrt page
    <string name="heading">We are on the mission to\n help the helpless</string>
    <string name="sign_phone">OR SIGN IN WITH PHONE NUMBER</string>
    <string name="privacy_policy">By Signing up you are agreening to the terms fo use and Privacy Policy</string>


    //number login page
    <string name="code">  +91</string>
    <string name="number_enter">Enter your number</string>
    <string name="verify">Verify Phone Number</string>
    <string name="message">By tapping Verify Phone Number, an SMS\nmay be sent. Message and data rates may apply.</string>

    //otp page
    <string name="enter_digit">Enter the 6 digit code we send to</string>
    <string name="number">+91 8824408362</string>
    <string name="requestOtpButton">Resend code in</string>
    <string name="timerTextView">00:00</string>
    <string name="btnNext">Next</string>

    //help page string
    <string name="help_text1">How can help you ?</string>
    <string name="help_text2">Feed the world and healthy\nplanet for future generation</string>

    //fisrt card text
    <string name="card_text_1">Volunteer\nwith use</string>
    <string name="crad_text_2">Lorem ipsum dolor sit,amet consectetur adipisicing elit. Pariatur modi fuga porro include adipisci,Pariatur modi fuga porro include adipisci,Pariatur modi fuga porro, optio ipsam. Quasi laudantium distinctio optin</string>

    //second card text
    <string name="card2_text_1">Partner\nWith Us</string>

    //third card text
    <string name="card3_text_1">Help Us for\nEducation</string>

    //Four card text
    <string name="card4_text_1">Donations\nEvery year</string>

    //button
    <string name="btn_donate">Donate</string>


    //my donation String
    <string name="top_title">My Donation</string>

    //first card text
    <string name="my_donation_card_text1">Lorem ipsum</string>
    <string name="doler_1">$521,22</string>
    <string name="my_donation_card_text2">RAISED</string>
    <string name="doler_2">$821,22</string>
    <string name="my_donation_card_text3">GOALS</string>
    <string name="card_on_text_1">Your Donation $5\n</string>
    <string name="card_on_text_2">Date:06/06/2024 11:30</string>
    <string name="donation_count">38,2552 Person Donated</string>

    //donate page String
    <string name="heading_text">Lorem ipsum dolor sit,amet consectetur\nadipisicing elit</string>
    <string name="dollar">$125.00</string>
    <string name="sun_heading">Funds Collected from $500.00</string>
    <string name="username">Bee Foundation</string>
    <string name="count_user">1200</string>
    <string name="days">15 Days left</string>
    <string name="text_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error modi fugiat quidem aut et dignissimos numquam ducimus dolores nisi velit, aperiam magnam sapiente mollitia vero quam labore porro provident consequatur optio alias nemo in veritatis qui necessitatibus! Adipisci omnis illo dicta, vitae distinctio, autem obcaecati itaque voluptas aliquid, vero maxime molestias unde quam quasi debitis error. Nihil corrupti sequi iusto quos, voluptas corporis vitae ipsam id omnis a illo, magnam itaque. Ullam, deserunt nemo modi a dolorem obcaecati unde delectus voluptatem cum illum nesciunt, excepturi sequi dignissimos eaque enim aut? Exercitationem ab rem nam eos consequuntur! Iure a ducimus inventore?</string>
    <string name="readmore">Read More</string>


    //all donation page
    <string name="pagetitle">ALL Donation</string>
    <string name="food_donate">Food Donate</string>
    <string name="tree_donate">Tree Donate</string>
    <string name="loram_ipos">Lorem Ipso</string>
    <string name="card_main_heading">Lunch Service Donation</string>
    <string name="card_sub_heading">Lorem ipsum</string>
    <string name="target_dollar">Target : $20,100</string>
    <string name="percentage">75%</string>
    <string name="btn_name">donate</string>


    //home page
    <string name="good_morning">Good Morning</string>
    <string name="name">Manoj Prajapat</string>
    <string name="tranding_donation">Tranding Donation</string>
    <string name="view_all">View All</string>
    <string name="time">5 Day Left</string>
</resources>