<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".donation.activity.Number_login">


    <com.hbb20.CountryCodePicker
        android:id="@+id/code"
        android:layout_width="@dimen/m150"
        android:layout_height="@dimen/m35"
        android:layout_marginTop="72dp"
        android:paddingEnd="@dimen/m10"
        android:paddingStart="@dimen/m5"/>


    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/m10"
        android:layout_marginTop="@dimen/m70"
        android:layout_toRightOf="@+id/code"
        android:layout_height="@dimen/m50"
        android:hint="@string/number_enter"
        android:inputType="number"
        android:padding="@dimen/m10"
        android:textColorHint="@color/gray" />


    <Button
        android:id="@+id/loginbtn"
        android:layout_marginTop="@dimen/m20"
        android:layout_marginRight="@dimen/m15"
        android:layout_marginLeft="@dimen/m15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/verify"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />



    <com.demo.donation.view.MediumTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_marginStart="@dimen/m15"
        android:layout_marginEnd="@dimen/m15"
        android:layout_marginTop="@dimen/m30"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/message"
        android:textSize="@dimen/text_16" />


</RelativeLayout>