<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".donation.fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/left_menu_toggle"
            android:layout_width="@dimen/m30"
            android:layout_height="@dimen/m30"
            android:layout_margin="@dimen/m5"
            android:src="@drawable/left_menu_toggle"
            app:tint="@color/mm" />

        <ImageView
            android:id="@+id/notification"
            android:layout_width="@dimen/m30"
            android:layout_height="@dimen/m30"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/m5"
            android:layout_marginRight="@dimen/m25"
            android:src="@drawable/notification" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="@dimen/m30"
            android:layout_height="@dimen/m30"
            android:layout_marginTop="@dimen/m5"
            android:layout_marginRight="@dimen/m25"
            android:layout_toLeftOf="@+id/notification"
            android:src="@drawable/search" />

        <com.demo.donation.view.BoldTextView
            android:id="@+id/good_morning"
            android:layout_width="@dimen/m130"
            android:layout_height="wrap_content"
            android:layout_below="@+id/left_menu_toggle"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m20"
            android:layout_marginTop="@dimen/m10"
            android:text="@string/good_morning"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <com.demo.donation.view.BoldTextView
            android:id="@+id/name"
            android:layout_width="@dimen/m250"
            android:layout_height="wrap_content"
            android:layout_below="@+id/good_morning"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m20"
            android:layout_marginTop="@dimen/m10"
            android:text="@string/name"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="@dimen/m50"
            android:layout_height="@dimen/m50"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/m60"
            android:layout_marginRight="@dimen/m24"
            android:src="@drawable/profile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m180"
            android:layout_below="@+id/user_img"
            android:layout_gravity="fill"
            android:layout_marginLeft="@dimen/m10"
            android:layout_marginTop="@dimen/m25"
            android:layout_marginRight="@dimen/m10"
            app:cardBackgroundColor="@color/gray_2"
            app:cardCornerRadius="@dimen/m15"
            app:cardElevation="@dimen/m7">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iss_auto_cycle="true"
                app:iss_delay="1000"
                app:iss_period="1000"
                app:iss_text_align="CENTER" />
        </androidx.cardview.widget.CardView>

        <com.demo.donation.view.BoldTextView
            android:id="@+id/trading_donation"
            android:layout_width="@dimen/m150"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView2"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m20"
            android:layout_marginTop="@dimen/m10"
            android:text="@string/tranding_donation"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <com.demo.donation.view.BoldTextView
            android:id="@+id/view_all"
            android:layout_width="@dimen/m80"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView2"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/m10"
            android:text="@string/view_all"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_14" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_all"
            android:layout_marginStart="@dimen/m8"
            android:layout_marginTop="@dimen/m5"
            tools:listitem="@layout/card_donation" />

        <com.demo.donation.view.BoldTextView
            android:id="@+id/donate_1"
            android:layout_width="@dimen/m110"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m20"
            android:layout_marginTop="@dimen/m10"
            android:text="@string/food_donate"
            android:textColor="@color/gray_3"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <com.demo.donation.view.BoldTextView
            android:id="@+id/donate_2"
            android:layout_width="@dimen/m110"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m10"
            android:layout_marginTop="@dimen/m10"
            android:layout_toRightOf="@+id/donate_1"
            android:text="@string/tree_donate"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <com.demo.donation.view.BoldTextView
            android:id="@+id/donate_3"
            android:layout_width="@dimen/m110"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m10"
            android:layout_marginTop="@dimen/m10"
            android:layout_toRightOf="@+id/donate_2"
            android:text="@string/loram_ipos"
            android:textColor="@color/gray_3"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />


        <GridLayout
            android:id="@+id/card_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donate_3"
            android:layout_marginEnd="@dimen/m15"
            android:layout_marginBottom="@dimen/m70"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:paddingStart="@dimen/m15"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="0"
                android:layout_gravity="fill"
                android:layout_margin="@dimen/m5"
                app:cardBackgroundColor="@color/gray_2"
                app:cardCornerRadius="@dimen/m22"
                app:cardElevation="@dimen/m7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/image1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/m170"
                            android:layout_margin="@dimen/m10"
                            android:scaleType="centerCrop"
                            android:src="@drawable/my_donation1"
                            app:shapeAppearanceOverlay="@style/RoundedCorners" />

                        <com.demo.donation.view.BoldTextView
                            android:id="@+id/overlay_text"
                            android:layout_width="@dimen/m120"
                            android:layout_height="@dimen/m40"
                            android:layout_gravity="right"
                            android:layout_marginTop="@dimen/m20"
                            android:layout_marginRight="@dimen/m20"
                            android:background="@drawable/rounded_background"
                            android:gravity="right"
                            android:paddingTop="@dimen/m5"
                            android:paddingRight="@dimen/m15"
                            android:text="@string/card_on_text_1"
                            android:textAlignment="gravity"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_12" />

                        <com.demo.donation.view.BoldTextView
                            android:layout_width="@dimen/m120"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="@dimen/m30"
                            android:layout_marginRight="@dimen/m20"
                            android:gravity="right"
                            android:paddingLeft="@dimen/m5"
                            android:paddingTop="@dimen/m10"
                            android:paddingRight="@dimen/m5"
                            android:text="@string/card_on_text_2"
                            android:textAlignment="gravity"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_10"

                            />


                        <com.demo.donation.view.BoldTextView
                            android:id="@+id/overlay_text1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/m30"
                            android:layout_marginLeft="@dimen/m20"
                            android:layout_marginTop="@dimen/m140"
                            android:layout_marginRight="@dimen/m20"
                            android:background="@drawable/rounded_background"
                            android:paddingStart="@dimen/m30"
                            android:paddingLeft="@dimen/m5"
                            android:paddingTop="@dimen/m5"
                            android:paddingRight="@dimen/m5"
                            android:text="@string/donation_count"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_14"
                            app:icon="@drawable/user_2" />
                    </FrameLayout>

                    <com.demo.donation.view.BoldTextView
                        android:layout_width="@dimen/m150"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/m10"
                        android:text="@string/my_donation_card_text1"
                        android:textSize="@dimen/text_14"
                        android:textStyle="bold" />

                    <com.demo.donation.view.BoldTextView
                        android:id="@+id/text2"
                        android:layout_width="@dimen/m100"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/m10"
                        android:text="@string/my_donation_card_text1"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_12"
                        android:textStyle="bold" />


                    <View
                        android:id="@+id/line_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/m1"
                        android:layout_marginStart="@dimen/m10"
                        android:layout_marginTop="@dimen/m10"
                        android:layout_marginEnd="@dimen/m10"
                        android:background="@color/white" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ProgressBar
                            android:id="@+id/progressBar_2"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="@dimen/m50"
                            android:layout_height="@dimen/m50"
                            android:progressDrawable="@drawable/progress_round"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/m10"
                            android:max="100"
                            android:progress="70"
                            android:indeterminate="false" />


                        <TextView
                            android:id="@+id/textViewProgress_2"
                            android:layout_width="@dimen/m30"
                            android:layout_height="@dimen/m30"
                            android:text="70%"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/m28"
                            android:textColor="@color/blue"
                            android:paddingLeft="@dimen/m5"
                            android:textSize="12sp" />

                    </RelativeLayout>



                    <com.demo.donation.view.BoldTextView
                        android:id="@+id/doler_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/doler_1"
                        android:layout_marginStart="@dimen/m20"
                        android:layout_marginTop="@dimen/m_40"
                        android:text="@string/doler_1"
                        android:textSize="@dimen/text_14"
                        android:textStyle="bold" />

                    <com.demo.donation.view.BoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/doler_2"
                        android:layout_marginStart="@dimen/m20"
                        android:text="@string/my_donation_card_text2"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_12"
                        android:textStyle="bold" />

                    <com.demo.donation.view.BoldTextView
                        android:id="@+id/doler_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/m_30"
                        android:layout_marginRight="@dimen/m30"
                        android:gravity="right"
                        android:text="@string/doler_2"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/text_14"
                        android:textStyle="bold" />


                    <com.demo.donation.view.BoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/doler_2"
                        android:layout_gravity="right"
                        android:layout_marginRight="@dimen/m30"
                        android:gravity="right"
                        android:text="@string/my_donation_card_text3"
                        android:textAlignment="gravity"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_12"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/m20">

                        <Button
                            android:id="@+id/donate"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/m50"
                            android:layout_marginStart="@dimen/m10"
                            android:layout_marginTop="@dimen/m10"
                            android:layout_marginEnd="@dimen/m60"
                            android:backgroundTint="@color/blue"
                            android:text="@string/btn_donate"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="@dimen/m30"
                            android:layout_height="@dimen/m30"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="@dimen/m15"
                            android:layout_marginRight="@dimen/m18"
                            android:src="@drawable/share" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </RelativeLayout>
</ScrollView>
